Transform3D added and fixed z-index issue for animated logo

--- a/app/styles/_animations.scss
+++ b/app/styles/_animations.scss
@@ -8,9 +8,11 @@
 @include keyframes(bounce){
 	0%, 50%, 100% {
 		@include transform(translateY(0));
+		@include transform(translate3D(0, 0, 0));
 	}
 	50% {
 		@include transform(translateY(-10px));
+		@include transform(translate3D(0, -10px, 0));
 	}
 }
 
